Fixing image placement.

--- a/clustering_nba_players.ipynb
+++ b/clustering_nba_players.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook clustering_nba_players.ipynb to html\n",
+      "[NbConvertApp] Writing 419110 bytes to clustering_nba_players.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert  clustering_nba_players.ipynb --to html"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
